--- a/.github/workflows/update-status.yml
+++ b/.github/workflows/update-status.yml
@@ -1,8 +1,8 @@
 name: Publish image update status
 
 on:
-  schedule:
-    - cron: "*/15 * * * *"
+  # schedule:
+  #   - cron: "*/15 * * * *"
   workflow_dispatch: {}
 
 permissions:
